feat: implementa suporte à paginação e busca desacoplados de frameworks
- Adiciona classe `Pagination` para representar páginas de resultados.
- Adiciona classe `SearchQuery` para encapsular critérios de busca paginada.
- Atualiza `Notification` para utilizar `Optional` em validações, evitando retornos `null`.
- Refatora porta de entrada `ListActiveProductsUseCase` para utilizar `SearchQuery` e retornar `Pagination`, removendo dependência do Spring Data.
- Adapta `ProductQueryGateway` para retornar `Pagination<ProductSummary>` no lugar de `Page`.
- Atualiza documentação relevante para refletir as mudanças na modelagem de paginação.
- Adiciona melhorias estruturais em `AssertionConcern` e entidades para validações fail-fast.